--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
     "content_scripts": [
         {
             "matches": ["https://cafe.naver.com/*"], 
-            "run_at": "document_idle",
+            "run_at": "document_start",
             "js": ["scripts/jquery-3.6.4.js", "scripts/content.js"],
             "css": ["css/content.css"],
             "all_frames": true
